[package]
name = "spectrogram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
rustfft = "6"

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioBuffer",
  "AudioDestinationNode",
  "AudioNode",
  "AudioProcessingEvent",
  "BaseAudioContext",
  "console",
  "Document",
  "Element",
  "HtmlAudioElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlMediaElement",
  "MediaDevices",
  "MediaElementAudioSourceNode",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "Navigator",
  "ScriptProcessorNode",
  "Window",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
]
